--- a/index.html
+++ b/index.html
@@ -8,16 +8,43 @@
   <title>Responsive</title>
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/base.css">
+  <link rel="stylesheet" href="./css/responsive.css">
 </head>
 
 <body>
   <h2 class="question--title">Q7 サイズ変更</h2>
+    <div class="Q1__box"></div>
   <h2 class="question--title">Q2 色変更</h2>
+    <div class="Q2__box"></div>
   <h2 class="question--title">Q3 margin値の変更</h2>
+    <div class="margin-box">
+      <div class="Q3-box1"></div>
+      <div class="Q3-box2"></div>
+    </div>
   <h2 class="question--title">Q4 floatの解除</h2>
+    <div class="float-box">
+      <div class="Q4-box1"></div>
+      <div class="Q4-box2"></div>
+    </div>
   <h2 class="question--title">Q5 flexboxの入れ替え(逆順)</h2>
+    <ul class="flex__box1">
+      <li class="red-box">A</li>
+      <li class="blue-box">B</li>
+      <li class="orange-box">C</li>
+    </ul>
   <h2 class="question--title">Q6 flexboxの入れ替え(指定)</h2>
+    <ul class="flex__box2">
+      <li class="green-box">A</li>
+      <li class="yerrow-box">B</li>
+      <li class="pink-box">C</li>
+    </ul>
   <h2 class="question--title">Q7 要素の表示・非表示</h2>
+    <ul class="display-box">
+      <li class="blue2-box"></li>
+      <li class="red2-box"></li>
+      <li class="green2-box"></li>
+    </ul>
+
 </body>
 
 </html>
