--- a/index.html
+++ b/index.html
@@ -23,20 +23,26 @@
     </div>
   <h2 class="question--title">Q4 floatの解除</h2>
     <div class="float-box">
-      <div class="Q4-box1"></div>
-      <div class="Q4-box2"></div>
+      <div class="clearfix">
+        <div class="Q4-box1"></div>
+        <div class="Q4-box2"></div>
+      </div>
     </div>
   <h2 class="question--title">Q5 flexboxの入れ替え(逆順)</h2>
     <ul class="flex__box1">
-      <li class="red-box">A</li>
-      <li class="blue-box">B</li>
-      <li class="orange-box">C</li>
+      <div class="text__box">
+        <li class="red-box">A</li>
+        <li class="blue-box">B</li>
+        <li class="orange-box">C</li>
+      </div>
     </ul>
   <h2 class="question--title">Q6 flexboxの入れ替え(指定)</h2>
     <ul class="flex__box2">
-      <li class="green-box">A</li>
-      <li class="yerrow-box">B</li>
-      <li class="pink-box">C</li>
+      <div class="text__box">
+        <li class="green-box">A</li>
+        <li class="yerrow-box">B</li>
+        <li class="pink-box">C</li>
+      </div>
     </ul>
   <h2 class="question--title">Q7 要素の表示・非表示</h2>
     <ul class="display-box">
